# ts-classify

./: .gitignore  CHANGELOG.md  CURRENT_TASK.md  Cargo.toml  LICENSE.md  README.md  package.json  pnpm-lock.yaml  server.js
.github/workflows/: publish.yml  release.yml
demo/: index.html
src/: lib.rs
test/: classifiers.test.mjs
