[package]
name = "ts-classify"
version = "0.1.0"
edition = "2021"
description = "Fast text classification with SVM and Nearest Centroid (WebAssembly)"
license = "MIT"
repository = "https://github.com/serialexp/ts-classify"

[lib]
name = "ts_classify"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
bincode = { version = "2", features = ["serde"] }
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
